# librpii2cslv

./: .editorconfig  .gitignore  Makefile.am  README.md  configure.ac  librpii2cslv.pc.in
include/: Makefile.am  rpii2cslv.h
src/: Makefile.am  main.c
test/: Makefile.am  test_simple.c
